--- a/.github/workflows/build-test-publish.yml
+++ b/.github/workflows/build-test-publish.yml
@@ -7,7 +7,7 @@ on: [push, pull_request]
 jobs:
   build_linux:
     runs-on: ubuntu-18.04
-    name: Build the Python wheel (Linux)
+    name: Wheel Linux
     steps:
       # For tags we assume the version in setup.py is correct!
       - name: Checkout
@@ -15,7 +15,7 @@ jobs:
       - name: Rewrite version for dev if not tag
         if: "!startsWith(github.ref, 'refs/tags/')"
         run: |
-          perl -i -pe "s/__version__\s*=\s*'(.*?)(rc.*|a.*|post.*)?'/__version__='\1.dev0+${GITHUB_SHA::8}'/" setup.py
+          perl -i -pe "s/__version__\s*=\s*'(.*?)(\.rc.*|\.a.*|\.post.*)?'/__version__='\1.dev0+${GITHUB_SHA::8}'/" setup.py
       - name: Note version
         run: |
           echo "PACKAGE_VERSION=$(python3 -- ./setup.py --version)" >> $GITHUB_ENV
@@ -38,7 +38,7 @@ jobs:
           path: dist/*.whl
   build_macos_windows:
     runs-on: ${{ matrix.os }}
-    name: Build the Python wheel (MacOS & Windows)
+    name: Mac/Win Wheel
     strategy:
       fail-fast: false
       matrix:
@@ -55,7 +55,7 @@ jobs:
         if: "!startsWith(github.ref, 'refs/tags/')"
         shell: bash
         run: |
-          perl -i -pe "s/__version__\s*=\s*'(.*?)(rc.*|a.*|post.*)?'/__version__='\1.dev0+${GITHUB_SHA::8}'/" setup.py
+          perl -i -pe "s/__version__\s*=\s*'(.*?)(\.rc.*|\.a.*|\.post.*)?'/__version__='\1.dev0+${GITHUB_SHA::8}'/" setup.py
       - name: Note version
         shell: bash
         run: |
@@ -78,7 +78,7 @@ jobs:
           path: dist/*.whl
   build_mingw:
     runs-on: windows-2019
-    name: Build the Python wheel (Windows Msys2/Mingw)
+    name: Msys Wheel
     strategy:
       fail-fast: false
       matrix:
@@ -107,7 +107,7 @@ jobs:
         if: "!startsWith(github.ref, 'refs/tags/')"
         shell: msys2 {0}
         run: |
-          perl -i -pe "s/__version__\s*=\s*'(.*?)(rc.*|a.*|post.*)?'/__version__='\1.dev0+${GITHUB_SHA::8}'/" setup.py
+          perl -i -pe "s/__version__\s*=\s*'(.*?)(\.rc.*|\.a.*|\.post.*)?'/__version__='\1.dev0+${GITHUB_SHA::8}'/" setup.py
       - name: Note version
         shell: msys2 {0}
         run: |
