--- a/.github/workflows/build-test-publish.yml
+++ b/.github/workflows/build-test-publish.yml
@@ -32,45 +32,9 @@ jobs:
         with:
           name: wheels-linux
           path: dist/*.whl
-  build_macos_windows:
-    runs-on: ${{ matrix.os }}
-    name: Mac/Win Wheel
-    strategy:
-      fail-fast: false
-      matrix:
-        os: [ macos-10.15, windows-2019 ]
-        python-version: [ '3.10' ]
-        arch: [ 'x64', 'x86' ]
-        exclude:
-          - os: macos-10.15
-            arch: 'x86'
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-      - name: Note version
-        shell: bash
-        run: |
-          echo "PACKAGE_VERSION=$(python3 -- ./setup.py --version)" >> $GITHUB_ENV
-      - name: Set up Python
-        uses: actions/setup-python@v1
-        with:
-          python-version: ${{ matrix.python-version }}
-          architecture: ${{ matrix.arch }}
-      - name: Upgrade pip, install GitPython
-        run: |
-          python -m pip install --upgrade pip GitPython wheel
-      - name: Build Python wheels
-        run: |
-          python setup.py bdist_wheel
-      - name: Upload wheels
-        uses: actions/upload-artifact@v2
-        with:
-          name: wheels-${{ matrix.os }}-py${{ matrix.python-version }}-${{ matrix.arch }}
-          path: dist/*.whl
   deploy:
     needs:
       - build_linux
-      - build_macos_windows
     runs-on: ubuntu-18.04
     name: Deploy wheels to PyPI
     steps:
@@ -89,4 +53,4 @@ jobs:
           TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
           TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
         run: |
-          twine upload wheels-linux/*manylinux*.whl wheels-windows*/*.whl wheels-macos*/*.whl
+          twine upload wheels-linux/*manylinux*.whl
