--- a/.github/workflows/build-test-publish.yml
+++ b/.github/workflows/build-test-publish.yml
@@ -5,45 +5,14 @@ name: Build, test and publish
 on: [push, pull_request]
 
 jobs:
-  build_linux:
-    runs-on: ubuntu-18.04
-    name: Wheel Linux
-    steps:
-      # For tags we assume the version in setup.py is correct!
-      - name: Checkout
-        uses: actions/checkout@v2
-      - name: Rewrite version for dev if not tag
-        if: "!startsWith(github.ref, 'refs/tags/')"
-        run: |
-          perl -i -pe "s/__version__\s*=\s*'(.*?)(\.rc.*|\.a.*|\.post.*)?'/__version__='\1.dev0+${GITHUB_SHA::8}'/" setup.py
-      - name: Note version
-        run: |
-          echo "PACKAGE_VERSION=$(python3 -- ./setup.py --version)" >> $GITHUB_ENV
-      - name: Set up Python 3.8
-        uses: actions/setup-python@v1
-        with:
-          python-version: 3.8
-      - name: Upgrade pip
-        run: |
-          python -m pip install --upgrade pip
-      - name: Build Python wheels
-        uses: RalfG/python-wheels-manylinux-build@v0.3.3-manylinux2014_x86_64
-        with:
-          python-versions: 'cp36-cp36m cp37-cp37m cp38-cp38 cp39-cp39'
-          build-requirements: 'GitPython'
-      - name: Upload wheels
-        uses: actions/upload-artifact@v2
-        with:
-          name: wheels-linux
-          path: dist/*.whl
-  build_macos_windows:
+  build_macos:
     runs-on: ${{ matrix.os }}
     name: Mac/Win Wheel
     strategy:
       fail-fast: false
       matrix:
-        os: [ macos-10.15, windows-2019 ]
-        python-version: [ '3.7', '3.8', '3.9' ]
+        os: [ macos-10.15 ]
+        python-version: [ '3.10' ]
         arch: [ 'x64', 'x86' ]
         exclude:
           - os: macos-10.15
@@ -51,11 +20,6 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Rewrite version for dev if not tag
-        if: "!startsWith(github.ref, 'refs/tags/')"
-        shell: bash
-        run: |
-          perl -i -pe "s/__version__\s*=\s*'(.*?)(\.rc.*|\.a.*|\.post.*)?'/__version__='\1.dev0+${GITHUB_SHA::8}'/" setup.py
       - name: Note version
         shell: bash
         run: |
@@ -76,66 +40,10 @@ jobs:
         with:
           name: wheels-${{ matrix.os }}-py${{ matrix.python-version }}-${{ matrix.arch }}
           path: dist/*.whl
-  build_mingw:
-    runs-on: windows-2019
-    name: Msys Wheel
-    strategy:
-      fail-fast: false
-      matrix:
-        include: [
-          { msystem: MINGW64, arch: x86_64, path: mingw64 },
-          { msystem: MINGW32, arch: i686, path: mingw32 }
-        ]
-    steps:
-      - name: Install MSys2 and dependencies
-        uses: msys2/setup-msys2@v2
-        with:
-          update: true
-          msystem: ${{ matrix.msystem }}
-          install: >-
-            git
-            unzip
-            mingw-w64-${{ matrix.arch }}-curl
-            mingw-w64-${{ matrix.arch }}-python
-            mingw-w64-${{ matrix.arch }}-python-pip
-            mingw-w64-${{ matrix.arch }}-python-pillow
-            mingw-w64-${{ matrix.arch }}-openssl
-            mingw-w64-${{ matrix.arch }}-toolchain
-      - name: Checkout
-        uses: actions/checkout@v2
-      - name: Rewrite version for dev if not tag
-        if: "!startsWith(github.ref, 'refs/tags/')"
-        shell: msys2 {0}
-        run: |
-          perl -i -pe "s/__version__\s*=\s*'(.*?)(\.rc.*|\.a.*|\.post.*)?'/__version__='\1.dev0+${GITHUB_SHA::8}'/" setup.py
-      - name: Note version
-        shell: msys2 {0}
-        run: |
-          echo "PACKAGE_VERSION=$(python3 -- ./setup.py --version)" >> $GITHUB_ENV
-      - name: Upgrade pip, install GitPython
-        shell: msys2 {0}
-        run: |
-          python -m pip install --upgrade pip GitPython wheel
-      - name: Fix Path
-        shell: msys2 {0}
-        run: |
-          ls /${{ matrix.path }}/bin
-          ln -s /${{ matrix.path }}/bin/mingw*-make.exe /${{ matrix.path }}/bin/make.exe
-      - name: Build Python wheels
-        shell: msys2 {0}
-        run: |
-          python setup.py bdist_wheel
-      - name: Upload wheels
-        uses: actions/upload-artifact@v2
-        with:
-          name: wheels-msys2-py-${{ matrix.msystem }}
-          path: dist/*.whl
   deploy:
-    if: startsWith(github.ref, 'refs/tags/')
     needs:
-      - build_linux
-      - build_macos_windows
-    runs-on: ubuntu-18.04
+      - build_macos
+    runs-on: ubuntu-latest
     name: Deploy wheels to PyPI
     steps:
       - name: Download wheels
@@ -153,4 +61,4 @@ jobs:
           TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
           TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
         run: |
-          twine upload wheels-linux/*manylinux*.whl wheels-windows*/*.whl wheels-macos*/*.whl
+          twine upload wheels-macos*/*.whl
