--- a/.github/workflows/build-test-publish.yml
+++ b/.github/workflows/build-test-publish.yml
@@ -6,7 +6,7 @@ on: [push, pull_request]
 
 jobs:
   build_linux:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     name: Wheel Linux
     steps:
       # For tags we assume the version in setup.py is correct!
@@ -43,7 +43,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ macos-10.15, windows-2019 ]
-        python-version: [ '3.7', '3.8', '3.9' ]
+        python-version: [ '3.7', '3.8', '3.9', '3.10' ]
         arch: [ 'x64', 'x86' ]
         exclude:
           - os: macos-10.15
@@ -135,7 +135,7 @@ jobs:
     needs:
       - build_linux
       - build_macos_windows
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     name: Deploy wheels to PyPI
     steps:
       - name: Download wheels
