--- a/.github/workflows/build-test-publish.yml
+++ b/.github/workflows/build-test-publish.yml
@@ -21,17 +21,10 @@ jobs:
       - name: Note version
         run: |
           echo "PACKAGE_VERSION=$(python3 -- ./setup.py --version)" >> $GITHUB_ENV
-      - name: Set up Python 3.8
-        uses: actions/setup-python@v1
-        with:
-          python-version: 3.8
-      - name: Upgrade pip
-        run: |
-          python -m pip install --upgrade pip
       - name: Build Python wheels
-        uses: RalfG/python-wheels-manylinux-build@v0.3.3-manylinux2014_x86_64
+        uses: RalfG/python-wheels-manylinux-build@v0.5.0-manylinux2014_x86_64
         with:
-          python-versions: 'cp36-cp36m cp37-cp37m cp38-cp38 cp39-cp39'
+          python-versions: 'cp36-cp36m cp37-cp37m cp38-cp38 cp39-cp39 cp310-cp310 cp311-cp311'
       - name: Upload wheels
         uses: actions/upload-artifact@v2
         with:
@@ -45,7 +38,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ macos-11 ] #, windows-2019 ]
-        python-version: [ '3.7', '3.8', '3.9', '3.10' ]
+        python-version: [ '3.7', '3.8', '3.9', '3.10', '3.11' ]
         arch: [ 'x64', 'x86' ]
         exclude:
           - os: macos-11
@@ -65,7 +58,7 @@ jobs:
         run: |
           echo "PACKAGE_VERSION=$(python3 -- ./setup.py --version)" >> $GITHUB_ENV
       - name: Set up Python
-        uses: actions/setup-python@v1
+        uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
           architecture: ${{ matrix.arch }}
@@ -146,10 +139,10 @@ jobs:
     steps:
       - name: Download wheels
         uses: actions/download-artifact@v2
-      - name: Set up Python 3.8
-        uses: actions/setup-python@v1
+      - name: Set up Python 3.11
+        uses: actions/setup-python@v4
         with:
-          python-version: 3.8
+          python-version: 3.11
       - name: Upgrade pip
         run: |
           python -m pip install --upgrade pip
