--- a/.github/workflows/build-test-publish.yml
+++ b/.github/workflows/build-test-publish.yml
@@ -64,6 +64,11 @@ jobs:
       - name: Upgrade pip
         run: |
           python -m pip install --upgrade pip wheel
+      - name: Set up MinGW
+        if: ${{ matrix.os == 'windows-2019' }}
+        uses: egor-tensin/setup-mingw@v2
+        with:
+          platform: x64
       - name: Build Python wheels
         run: |
           python setup.py bdist_wheel
