--- a/.github/workflows/build-test-publish.yml
+++ b/.github/workflows/build-test-publish.yml
@@ -5,6 +5,65 @@ name: Build, test and publish
 on: [push, pull_request]
 
 jobs:
+  typechecks:
+    runs-on: ubuntu-latest
+    name: Type checks
+    strategy:
+      max-parallel: 5
+      matrix:
+        python-version: [ "3.8", "3.9", "3.10", "3.11" ]
+    steps:
+    - uses: actions/checkout@v3
+    - uses: theCapypara/mypy-check@rust-support
+      name: Run type checks
+      with:
+        python_version: '${{ matrix.python-version }}'
+
+  code-formatting:
+    runs-on: ubuntu-latest
+    needs: cache
+    name: Code Format Check
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          submodules: 'recursive'
+      - name: Set up Python 3.11
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.11"
+      - uses: actions/cache@v3
+        with:
+          path: ${{ env.pythonLocation }}
+          key: py3.11-${{ github.run_id }}
+      - uses: psf/black@stable
+        with:
+          options: "--check -t py38 --extend-exclude _resources/pmdsky-debug"
+          src: "skytemple_files"
+
+  import-check:
+    runs-on: ubuntu-latest
+    needs: cache
+    name: Check unused imports
+    steps:
+    - uses: actions/checkout@v3
+      with:
+        submodules: 'recursive'
+    - name: Set up Python 3.11
+      uses: actions/setup-python@v4
+      with:
+        python-version: "3.11"
+    - uses: actions/cache@v3
+      with:
+        path: ${{ env.pythonLocation }}
+        key: py3.11-${{ github.run_id }}
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+        pip install -e .
+    - name: Analysing the code with pycln
+      run: pycln skytemple_files -c -a
+
   build_linux:
     runs-on: ubuntu-latest
     name: Wheel Linux
