--- a/.github/workflows/build-test-publish.yml
+++ b/.github/workflows/build-test-publish.yml
@@ -21,7 +21,6 @@ jobs:
 
   code-formatting:
     runs-on: ubuntu-latest
-    needs: cache
     name: Code Format Check
     steps:
       - uses: actions/checkout@v3
@@ -31,10 +30,6 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: "3.11"
-      - uses: actions/cache@v3
-        with:
-          path: ${{ env.pythonLocation }}
-          key: py3.11-${{ github.run_id }}
       - uses: psf/black@stable
         with:
           options: "--check -t py38 --extend-exclude _resources/pmdsky-debug"
@@ -42,7 +37,6 @@ jobs:
 
   import-check:
     runs-on: ubuntu-latest
-    needs: cache
     name: Check unused imports
     steps:
     - uses: actions/checkout@v3
@@ -52,14 +46,10 @@ jobs:
       uses: actions/setup-python@v4
       with:
         python-version: "3.11"
-    - uses: actions/cache@v3
-      with:
-        path: ${{ env.pythonLocation }}
-        key: py3.11-${{ github.run_id }}
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        pip install pycln
         pip install -e .
     - name: Analysing the code with pycln
       run: pycln skytemple_files -c -a
@@ -76,14 +66,14 @@ jobs:
       - name: Rewrite version for dev if not tag
         if: "!startsWith(github.ref, 'refs/tags/')"
         run: |
-          perl -i -pe "s/__version__\s*=\s*'(.*?)(\.rc.*|\.a.*|\.post.*)?'/__version__='\1.dev0+${GITHUB_SHA::8}'/" setup.py
+          perl -i -pe "s/version\s*=\s*'(.*?)(\.rc.*|\.a.*|\.post.*)?'/version='\1.dev0+${GITHUB_SHA::8}'/" pyproject.toml
       - name: Note version
         run: |
           echo "PACKAGE_VERSION=$(python3 -- ./setup.py --version)" >> $GITHUB_ENV
       - name: Build Python wheels
         uses: RalfG/python-wheels-manylinux-build@v0.5.0-manylinux2014_x86_64
         with:
-          python-versions: 'cp36-cp36m cp37-cp37m cp38-cp38 cp39-cp39 cp310-cp310 cp311-cp311'
+          python-versions: 'cp38-cp38 cp39-cp39 cp310-cp310 cp311-cp311'
       - name: Upload wheels
         uses: actions/upload-artifact@v3
         with:
@@ -96,7 +86,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ macos-11, windows-2019 ]
-        python-version: [ '3.7', '3.8', '3.9', '3.10', '3.11' ]
+        python-version: [ '3.8', '3.9', '3.10', '3.11' ]
         arch: [ 'x64', 'x86' ]
         exclude:
           - os: macos-11
