--- a/.github/workflows/build-test-publish.yml
+++ b/.github/workflows/build-test-publish.yml
@@ -114,8 +114,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip wheel
       - name: Build Python wheels
-        run: |
-          python setup.py bdist_wheel
+        run: pip wheel -w ./dist .
       - name: Upload wheels
         uses: actions/upload-artifact@v3
         with:
