--- a/.github/workflows/build-test-publish.yml
+++ b/.github/workflows/build-test-publish.yml
@@ -117,7 +117,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip wheel
       - name: Build Python wheels
-        run: pip wheel -w ./dist .
+        run: pip wheel -w ./dist  --no-deps .
       - name: Upload wheels
         uses: actions/upload-artifact@v3
         with:
