--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,5 @@
 [build-system]
-# 64+ is broken with editable:
-# - https://github.com/pypa/setuptools/issues/3518
-# - https://github.com/python/mypy/issues/13392
-requires = ['setuptools>=62.0, <64.0', 'wheel', 'setuptools_dso~=2.9']
+requires = ['setuptools', 'wheel', 'setuptools_dso~=2.9']
 build-backend = 'setuptools.build_meta'
 
 [project]
@@ -10,7 +7,7 @@ name        = 'tilequant'
 description = 'Tool for quantizing image colors using tile-based palette restrictions'
 version     = '1.0.0'
 readme      = 'README.rst'
-requires-python = '>=3.8'
+requires-python = '>=3.9'
 authors = [
   { name='Marco "Capypara" Köpcke', email='hello@capypara.de' },
 ]
@@ -19,10 +16,10 @@ classifiers = [
     'Programming Language :: Python',
     'License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)',
     'Topic :: Multimedia :: Graphics',
-    'Programming Language :: Python :: 3.8',
     'Programming Language :: Python :: 3.9',
     'Programming Language :: Python :: 3.10',
     'Programming Language :: Python :: 3.11',
+    'Programming Language :: Python :: 3.12',
 ]
 dependencies = [
     'Pillow>=9.5,<10.1',
