--- a/.github/workflows/build-test-publish.yml
+++ b/.github/workflows/build-test-publish.yml
@@ -90,10 +90,16 @@ jobs:
       matrix:
         os: [ macos-11, windows-2019 ]
         python-version: [ '3.9', '3.10', '3.11', '3.12' ]
-        arch: [ 'x64', 'x86' ]
+        arch: [ 'x86_64', 'AMD64', 'x86', 'arm64' ]
         exclude:
           - os: macos-11
             arch: 'x86'
+          - os: windows-2019
+            arch: 'arm64'
+          - os: macos-11
+            arch: 'AMD64'
+          - os: windows-2019
+            arch: 'x86_64'
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -112,16 +118,16 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
-          architecture: ${{ matrix.arch }}
-      - name: Upgrade pip
-        run: |
-          python -m pip install --upgrade pip wheel
-      - name: Build Python wheels
-        run: pip wheel -w ./dist  --no-deps .
+      - name: Install cibuildwheel
+        run: python -m pip install cibuildwheel
+      - name: Build wheels
+        run: python -m cibuildwheel --output-dir dist
+        env:
+          CIBW_ARCHS: ${{ matrix.arch }}
       - name: Upload wheels
         uses: actions/upload-artifact@v3
         with:
-          name: wheels-${{ matrix.os }}-py${{ matrix.python-version }}-${{ matrix.arch }}
+          name: wheels-${{ matrix.os }}
           path: dist/*.whl
   deploy:
     if: startsWith(github.ref, 'refs/tags/')
