--- a/.github/workflows/build-test-publish.yml
+++ b/.github/workflows/build-test-publish.yml
@@ -87,26 +87,20 @@ jobs:
         shell: bash
         run: |
           perl -i -pe "s/version\s*=\s*\"(.*?)(\.rc.*|\.a.*|\.post.*)?\"/version=\"\1.dev0+${GITHUB_SHA::8}\"/" pyproject.toml
-      - name: Note version (Linux)
-        if: matrix.os == 'ubuntu-latest'
+      - name: Note version
+        if: matrix.os != 'windows-2019'
         shell: bash
-        run: |
-          echo "PACKAGE_VERSION=$(tomlq '.project.version' pyproject.toml -r)" >> $GITHUB_ENV
-      - name: Note version (Windows)
-        if: matrix.os == 'windows-2019'
-        run: |
-          $env:path = "C:\pipx_bin;" + $env:path
-          
-          pipx install yq
-          $env:PACKAGE_VERSION = tomlq.exe '.project.version' pyproject.toml -r
-          echo "PACKAGE_VERSION=$env:PACKAGE_VERSION" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
-      - name: Note version (MacOS)
-        if: matrix.os == 'macos-11'
         run: |
           python3 -m venv .yq-venv
           . .yq-venv/bin/activate
           pip install yq
           echo "PACKAGE_VERSION=$(tomlq '.project.version' pyproject.toml -r)" >> $GITHUB_ENV
+      - name: Note version (Windows)
+        if: matrix.os == 'windows-2019'
+        run: |
+          pipx install yq
+          $env:PACKAGE_VERSION = tomlq.exe '.project.version' pyproject.toml -r
+          echo "PACKAGE_VERSION=$env:PACKAGE_VERSION" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
 
       - name: Set up QEMU
         if: runner.os == 'Linux'
