--- a/.github/workflows/build-test-publish.yml
+++ b/.github/workflows/build-test-publish.yml
@@ -16,11 +16,13 @@ jobs:
     - uses: actions/checkout@v4
       with:
         submodules: 'recursive'
-    - uses: theCapypara/mypy-check@rust-support
-      name: Run type checks
-      with:
-        python_version: '${{ matrix.python-version }}'
-        requirements: '-r mypy-requirements.txt'
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r mypy-requirements.txt mypy
+    - name: Run type checks
+      run: |
+        mypy tilequant
 
   code-formatting:
     runs-on: ubuntu-latest
@@ -33,10 +35,12 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
-      - uses: psf/black@stable
-        with:
-          options: "--check -t py38"
-          src: tilequant
+      - name: Install ruff
+        run: |
+          python -m pip install --upgrade pip
+          pip install ruff
+      - name: Check with ruff
+        run: ruff format --check tilequant
 
   import-check:
     runs-on: ubuntu-latest
